@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-03T01:21:45Z",
-  "count" : 8,
+  "timestamp" : "2025-02-16T01:35:23Z",
+  "count" : 7,
   "count_minmax" : [ 1, 8 ],
-  "count_decinc" : [ -0, +8 ],
-  "uniques" : 6,
+  "count_decinc" : [ -1, +8 ],
+  "uniques" : 5,
   "uniques_minmax" : [ 1, 6 ],
-  "uniques_decinc" : [ -0, +6 ]
+  "uniques_decinc" : [ -1, +6 ]
 }
