@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-02-15T12:32:20Z",
+  "timestamp" : "2025-02-16T01:35:23Z",
   "count_outdated" : 4611,
   "uniques_outdated" : 2358,
-  "count" : 4651,
-  "uniques" : 2392,
+  "count" : 4652,
+  "uniques" : 2393,
   "clones" : [
     {
       "timestamp": "2025-02-02T00:00:00Z",
-      "count": 8,
+      "count": 7,
       "count_minmax": [ 1, 8 ],
-      "count_decinc": [ 0, 8 ],
-      "uniques": 6,
+      "count_decinc": [ 1, 8 ],
+      "uniques": 5,
       "uniques_minmax": [ 1, 6 ],
-      "uniques_decinc": [ 0, 6 ]
+      "uniques_decinc": [ 1, 6 ]
     },
     {
       "timestamp": "2025-02-03T00:00:00Z",
@@ -121,6 +121,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-02-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
