@@ -1,11 +1,11 @@
 {
   "count": 40,
-  "uniques": 19,
+  "uniques": 18,
   "clones": [
     {
       "timestamp": "2025-02-02T00:00:00Z",
-      "count": 8,
-      "uniques": 6
+      "count": 7,
+      "uniques": 5
     },
     {
       "timestamp": "2025-02-03T00:00:00Z",
@@ -66,6 +66,11 @@
       "timestamp": "2025-02-14T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-02-15T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
